# pensjon-pen-dataprodukt

./: .gitignore  .sqlfluffignore  README.md  dbt_project.yml  justfile  lokal-kjøring.sh  profiles.yml  pyproject.toml
dbt/: .sqlfluff  .sqlfluffignore  dbt_project.yml  dbt_run.py  example.env  lokal-kjøring.sh  profiles.yml  publisere_dbt_docs.py  pyproject.toml
dbt/docs/: landingsside.md
dbt/models/: sources.yml
dbt/models/marts/: alderspensjon_vedtak.sql  alderspensjon_vedtak.yml  analyse_beregning.sql  analyse_beregning_belop.sql  analyse_beregning_kap_20.sql  analyse_felt_beregning_kap19.sql  analyse_felt_beregning_kap20.sql  models.yml  sql_pilot_dbt.sql  sql_pilot_original.sql
dbt/models/marts/alderspensjon/: dataprodukt_alderspensjon.yml  dataprodukt_alderspensjon_belop.sql  dataprodukt_alderspensjon_beregning.sql  dataprodukt_alderspensjon_vedtak.sql  dataprodukt_alderspensjon_vedtak.yml
dbt/models/marts/analyse/: analyse_ifu_ieu_grad.sql  analyse_ifu_ieu_grad_view.sql  analyse_lopende_ufore.sql  analyse_lovendringer_2026.sql  analyse_lovendringer_eps.sql  analyse_lovendringer_eps_og_bt.sql
dbt/models/marts/avstemming/: SQL_pesys_alder_II_current.sql  SQL_pesys_alder_II_forrige_mnd.sql  SQL_pesys_alder_I_current.sql  SQL_pesys_alder_I_forrige_mnd.sql  wendelboe_pesys_alder_II_current.sql  wendelboe_pesys_alder_I_current.sql
dbt/models/marts/behandlingsstatistikk/: behandlingsstatistikk.yml  behandlingsstatistikk_alder_meldinger.sql  behandlingsstatistikk_grunnlag.sql  behandlingsstatistikk_meldinger.sql  behandlingsstatistikk_meldinger_v2.sql  behandlingsstatistikk_ufore_meldinger.sql
dbt/models/marts/stonadsstatistikk/: dataprodukt_alderspensjon.yml  stonadsstatistikk_alder_belop.sql  stonadsstatistikk_alder_beregning.sql  stonadsstatistikk_alder_vedtak.sql
dbt/models/marts/ufore_diagnosekoder/: dataprodukt_ufore_diagnosekoder.sql
dbt/models/staging/pen/: stg_t_anvendt_trygdetid.sql  stg_t_beholdning.sql  stg_t_beholdning.yml  stg_t_beregning.sql  stg_t_beregning.yml  stg_t_beregning_2011.sql  stg_t_beregning_info.sql  stg_t_beregning_info.yml  stg_t_beregning_res.sql  stg_t_beregning_res.yml  stg_t_brok.sql  stg_t_eo_resultat_ut.sql  stg_t_f_min_pen_niva.sql  stg_t_inntekt.sql  stg_t_kode67_kravhode.sql  stg_t_kravhode.sql  stg_t_kravhode.yml  stg_t_kravlinje.sql  stg_t_min_pen_niva.sql  stg_t_min_pen_niva.yml  stg_t_pen_under_utbet.yml  stg_t_person.sql  stg_t_person_det.sql  stg_t_sak.sql  stg_t_uttaksgrad.sql  (+10 more)
dbt/seeds/: _seeds.yml  overgangsstonad.csv
dbt/snapshots/: snapshot_int_alder_behandling_grunnlag.yml  snapshot_int_apne_behandlinger_for_2026.yml  snapshot_int_behandling_grunnlag.yml  snapshot_kravhode.yml  snapshot_saksbehandlingsstatistikk.yml  snapshot_sakteam.yml  snapshot_vedtak.yml
dbt/tests/: test_pilot_dbt_vs_original.sql
(+48 files in other folders)
