[project]
name = "pen-dataprodukt"
version = "0.1.0"
description = "Lage dataprodukt med dbt i PEN, oracledatabasen for pensjon og uføre"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # se https://github.com/navikt/dvh-images/blob/main/airflow/dbt/pyproject.toml
    "dbt-oracle>=1.9.4",
    "oracledb>=3.3.0",
    "requests>=2.32.5",
    "db-dtypes>=1.4.4",
    "dbt-core>=1.10.15",
    "cryptography>=46.0.3",
]


[tool.uv]
package = false

[dependency-groups]
dev = [
    "black>=25.12.0",
    "google-cloud-secret-manager>=2.25.0",
    "sqlfluff>=3.5.0",
    "ruff>=0.14.8",
]

[tool.ruff]
include = ["*.py", "*.ipynb"]
line-length = 120
