[project]
name = "pen-dataprodukt"
version = "0.1.0"
description = "Lage dataprodukt med dbt i PEN, oracledatabasen for pensjon og uføre"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # se https://github.com/navikt/dvh-images/blob/main/airflow/dbt/pyproject.toml
    "dbt-oracle>=1.11.0",
    "oracledb>=3.3.0",
    "requests>=2.34.2",
    "db-dtypes>=1.6.0",
    "dbt-core>=1.11.10",
    "cryptography>=48.0.0",
]


[tool.uv]
package = false

[dependency-groups]
dev = [
    "black>=25.12.0",
    "google-cloud-secret-manager>=2.28.0",
    "sqlfluff>=4.2.1",
    "ruff>=0.15.13",
]

[tool.ruff]
include = ["*.py", "*.ipynb"]
line-length = 120
